<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">doo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Setting</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title_activity_package">PackageActivity</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="email">อีเมล์</string>
    <string name="password">รหัสผ่าน</string>
    <string name="register">สมัครสมาชิก</string>
    <string name="password_min">รหัสผ่านอย่างน้อย 4 ตัวอักษร</string>
    <string name="password_confirm">ยืนยันรหัสผ่าน</string>
    <string name="firstname">ชื่อ</string>
    <string name="lastname">นามสกุล</string>
    <string name="phone">เบอร์โทรศัพท์</string>
    <string name="movie_title">ชื่อเรื่อง</string>
    <string name="movie_description">รายละเอียด</string>
    <string name="movie_score">คะแนน</string>
    <string name="movie_rating">เรท</string>
    <string name="movie_cast">นักแสดง</string>
    <string name="movie_director">ผู้กำกับ</string>
    <string name="movie_year">ปี</string>
    <string name="movie_length">ความยาว</string>
    <string name="title_activity_movie">MovieActivity</string>
    <string name="error_json_null">ข้อมูลผิดพลาด กรุณาลองใหม่อีกครั้งค่ะ</string>
    <string name="error_payment_code_invalid">รหัสไม่ถูกต้องค่ะ</string>
    <string name="error_payment_creditno_invalid">หมายเลขบัตรไม่ถูกต้องค่ะ</string>
    <string name="error_payment_creditexpire_invalid">วันหมดอายุไม่ถูกต้องค่ะ</string>
    <string name="error_payment_creditname_invalid">ชื่อ-นามสกุล บนบัตรไม่ถูกต้องค่ะ</string>
    <string name="error_payment_creditcvv_invalid">หมายเลขหลังบัตรไม่ถูกต้องค่ะ</string>
    <string name="error_email_invalid">อีเมล์ไม่ถูกต้องค่ะ</string>
    <string name="error_password_invalid">รหัสผ่านไม่ถูกต้องค่ะ</string>
    <string name="error_password_missmatch">ยืนยันรหัสผ่านไม่ตรงกันค่ะ</string>
    <string name="error_phone_invalid">เบอร์โทรศัพท์ไม่ถูกต้องค่ะ</string>
    <string name="title_activity_package_detail">รายละเอียดแพ๊กเกจ</string>
    <string name="payment_creditcard">บัตรเครดิต</string>
    <string name="payment_bankcounter">เคาน์เตอร์ธนาคาร</string>
    <string name="payment_atm">เอทีเอ็ม</string>
    <string name="payment_paypoint">จุดรับชำระค่าบริการ</string>
    <string name="payment_ibanking">ไอแบงก์กิ้ง</string>
    <string name="payment_prepaidcard">บัตรเติมเงิน</string>
    <string name="title_activity_payment_choose">PaymentChooseActivity</string>
    <string name="title_activity_payment_credit_card">เครดิตการ์ด</string>
    <string name="title_activity_payment_bank">ชำระเงินผ่านธนาคาร</string>
    <string name="payment_choose_bank">เลือกธนาคาร</string>
    <string name="title_activity_payment_pay_point">จุดรับชำระเงิน</string>
    <string name="title_activity_payment_prepaid_card">ชำระผ่านบัตรเติมเงิน</string>
    <string name="payment_card_title">ใส่รหัสบัตรเติมเงินของคุณ 16 หลัก</string>
    <string name="payment_card_submitbt">ยืนยันการชำระเงิน</string>
    <string name="payment_creditcard_label">หมายเลขบัตรเครดิต</string>
    <string name="payment_creditcard_expire">วันหมดอายุ Ex.01/2014</string>
    <string name="payment_creditcard_name">ชื่อ-นามสกุล บนบัตร</string>
    <string name="payment_creditcard_cvv">หมายเลข cvv (หลังบัตร)</string>
    <string name="payment_paypoint_title">เลือกจุดชำระเงิน</string>
    <string name="version">เวอร์ชั่น</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_is_18">แจ้งเตือน</string>
    <string name="message_is_18">ภาพและเนื้อหาต่อไปนี้ ไม่เหมาะสมแก่เด็ก และเยาวชนอายุต่ำกว่า 18 ปี กรุณายืนยันอายุของคุณ</string>
    <string name="alert_yes">ข้าพเจ้า 18+ แล้ว</string>
    <string name="alert_no">ยังไม่ถึง 18 ปี</string>
    <string name="action_profile">Profile</string>
    <string name="action_search">Search</string>
    <string name="action_category">Category</string>
    <string name="movie_zero">ค้นพบ 0 เรื่อง</string>


    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="text">Text</string>
    <string name="logging">Logging</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="retry">Retry</string>
    <string name="off">[off]</string>
    <string name="on">[on]</string>
    <string name="drm_not_supported">Protected content not supported on API levels below 18</string>
    <string name="failed">Playback failed</string>
    <string name="title_activity_test_case">TestCaseActivity</string>
    <string name="test_running">Test Running...</string>
    <string name="enable_background_audio">Play in background</string>

    <string name="error_missing_movie">ไม่สามารถเล่นวีดีโอนี้ได้</string>
</resources>
