<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >
    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="300"
        android:showAsAction="ifRoom|withText" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_search"
        android:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_category"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_category"
        android:orderInCategory="200"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:actionViewClass="android.widget.Spinner"/>

</menu>
