<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="th.co.mediaplex.dooneetv.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register"
        android:id="@+id/descriptionTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailEditText"
        android:layout_below="@+id/descriptionTextView"
        android:layout_centerHorizontal="true"
        android:hint="@string/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:hint="@string/password_min"
        android:layout_below="@+id/emailEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirmPasswordEditText"
        android:hint="@string/password_confirm"
        android:layout_below="@+id/passwordEditText"
        android:layout_alignLeft="@+id/firstNameEditText"
        android:layout_alignStart="@+id/firstNameEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstNameEditText"
        android:layout_below="@+id/confirmPasswordEditText"
        android:layout_centerHorizontal="true"
        android:hint="@string/firstname"
        android:visibility="invisible" />
<!--
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/lastNameEditText"
        android:layout_below="@+id/firstNameEditText"
        android:layout_centerHorizontal="true"
        android:hint="@string/lastname"
        android:visibility="invisible" />
-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phoneEditText"
        android:layout_below="@+id/confirmPasswordEditText"
        android:layout_centerHorizontal="true"
        android:hint="@string/phone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:layout_below="@+id/phoneEditText"
        android:layout_centerHorizontal="true"
        android:src="@android:drawable/ic_menu_gallery"
        android:text="@string/register" />

</RelativeLayout>
